--- a/index.html
+++ b/index.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8" />
 <title>RPG Same Page Tool v2</title>
 <style type="text/css">
+	html { font-size: 120%; }
 	body { color: #000000; background: #ffffff; margin: 0; padding: 0; }
-	table { width: 99.4%; max-width: 180ex; margin: auto; white-space: nowrap; }
-	td { border: 1px #009900 dotted; padding: .2em; vertical-align: middle; text-align: left; overflow: hidden; }
-	th { background: #eeeeee; font-weight: normal; text-align: right; width: 5%; }
-	label { opacity: 0.5; }
-	input:checked + label { opacity: 1; background-color: #ffff77; }
-	textarea,input[type=text] { font-family: inherit; font-size: 96%; vertical-align: middle; text-align: left; width: 99.4%; border: none; white-space: auto; }
+	table { margin: auto; max-width: 60rem; }
+	td { border: 1px #009900 dotted; padding: .2em; vertical-align: middle; text-align: left; }
+	th { background: #eeeeee; font-weight: normal; text-align: right; max-width: 10%; }
+	label { display: block; opacity: 0.5; max-width: 24rem; white-space: nowrap; overflow: hidden; text-overflow: clip; }
+	label abbr { font-size: .25rem; color: #006600; }
+	input[type=radio],input[type=checkbox] { float: left; }
+	input:checked + label { opacity: 1; background-color: #ffff77; white-space: unset; overflow: visible; }
+	input:checked + label abbr { display: block; white-space: normal; font-size: 1rem; padding-left: .5rem; }
+	textarea,input[type=text] { font-family: inherit; font-size: 96%; vertical-align: middle; text-align: left; width: 99%; max-width: 50rem; border: none; white-space: auto; }
 	textarea:hover,input:hover { box-shadow: inset 0 0 1ex rgba(0,0,255,0.5); }
-	input[type=radio]:hover,input[type=checkbox]:hover { box-shadow: 0 0 1ex rgba(0,0,255,0.5), inset 0 0 1ex rgba(0,0,255,0.5); }
+	label:hover { box-shadow: 0 0 1ex rgba(0,0,255,0.5), inset 0 0 1ex rgba(0,0,255,0.5); }
 	.noborder { border: none; }
 	.omit { margin: 1ex 15%; }
 	a:hover { background-color: #ffeedd; }
-	@media print { 
-		.omit { display: none; }
-	}
 	#t0 { font-weight: bold; font-size: larger; text-align: center; }
 	#t2 { text-indent: 3ex; }
 	#printbutton { border-radius: 1.5ex; padding: 0.5ex 1ex; font-family: inherit; font-size: inherit; }
+	@media print { 
+		html { font-size: 100%; }
+		.omit,abbr { display: none; }
+		td { width: 45%; }
+		input:checked + label abbr { display: block; }
+		* { max-width: initial !important; }
+		*::placeholder { opacity: 0.5; }
+		label, input:checked + label { white-space: nowrap; overflow: visible; text-overflow: unset; }
+		*:hover, label:hover { box-shadow: unset; }
+	}
 </style>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -34,73 +46,73 @@
 </tr>
 <tr>
 	<th></th>
-	<td colspan="2"> <textarea name="t1" rows="3" placeholder="Description of the game: high concept, background, story &amp; character intro, links to guides &amp; source material, etc." title="description, story intro, character roles, links, etc"></textarea> </td> 
+	<td colspan="2"> <textarea name="t1" rows="3" placeholder="Description of the game: high concept, background, intro, links to guides &amp; source material, etc." title="description, story intro, character roles, links, etc"></textarea> </td> 
 </tr>
 <tr>
 	<th title="0: How to prepare before joining the game.">Player Knowledge</th>
 	<td>
-		<input type="radio" name="q0" id="know0" value="0" /><label for="know0" title="If you're familiar with similar genre fiction, you can learn the rules while you play."> GENRE: it's like that movie.</label><br />
-		<input type="radio" name="q0" id="know1" value="1" /><label for="know1" title="If you've skimmed the key rules (or played a similar game) we can fill in the details."> BASICS: how the stats &amp; dice work.</label><br />
-		<input type="radio" name="q0" id="know2" value="2" /><label for="know2" title="We use a lot of game jargon &amp; references, so you'll need to keep up."> MASTERY: rulebook cover to cover.</label><br />
+		<input type="radio" name="q0" id="know0" value="0" /><label for="know0" title="If you're familiar with similar genre fiction, you can learn the rules while you play."> GENRE: it's like that movie.</label>
+		<input type="radio" name="q0" id="know1" value="1" /><label for="know1" title="If you've skimmed the key rules (or played a similar game) we can fill in the details."> BASICS: how the stats &amp; dice work.</label>
+		<input type="radio" name="q0" id="know2" value="2" /><label for="know2" title="We use a lot of game jargon &amp; references, so you'll need to keep up."> MASTERY: rulebook cover to cover.</label>
 	</td>
 	<td>
-		<input type="checkbox" name="f0" id="know-geo" value="0" /><label for="know-geo" title="You're expected to know the setting from a book, movie, or previous game."> UNIVERSE: names, locations, lore.</label><br />
+		<input type="checkbox" name="f0" id="know-geo" value="0" /><label for="know-geo" title="You're expected to know the setting from a book, movie, or previous game."> UNIVERSE: names, locations, lore.</label>
 	</td>
 </tr>
 <tr>
 	<th title="1: How to make your Player Character (PC).">Character Creation</th>
 	<td>
-		<input type="radio" name="q1" id="pg0" value="0" /><label for="pg0" title="The Game Master will bring characters and give them to the players."> PREGENERATED: read 'em &amp; weep.</label><br />
-		<input type="radio" name="q1" id="pg1" value="1" /><label for="pg1" title="We create characters collaboratively at the start of the game."> DAY ONE: made together as a group.</label><br />
-		<input type="radio" name="q1" id="pg2" value="2" /><label for="pg2" title="Create &amp; bring your character sheet so we can start playing right away."> ROLL YOUR OWN: bring 'em on.</label><br />
+		<input type="radio" name="q1" id="pg0" value="0" /><label for="pg0" title="The Game Master will bring characters and give them to the players."> PREGENERATED: read 'em &amp; weep.</label>
+		<input type="radio" name="q1" id="pg1" value="1" /><label for="pg1" title="We create characters collaboratively at the start of the game."> DAY ONE: made together as a group.</label>
+		<input type="radio" name="q1" id="pg2" value="2" /><label for="pg2" title="Create your character in advance so we can start playing right away."> ROLL YOUR OWN: bring 'em on.</label>
 		<input type="text" name="t2" id="t2" title="character creation instructions or link" />
 	</td>
 	<td>
-		<input type="checkbox" name="f1" id="pc0" value="0" /><label for="pc0" title="Who are you? Where are you from?"> DETAILED: history &amp; personality.</label><br />
-		<input type="checkbox" name="f2" id="pc1" value="1" /><label for="pc1" title="What do you want? Why are you here?"> MOTIVATED: desires &amp; plans.</label><br />
-		<input type="checkbox" name="f3" id="pc2" value="2" /><label for="pc2" title="How do your quirks &amp; foibles induce drama?"> FLAWED: characters with character.</label><br />
-		<input type="checkbox" name="f4" id="pc3" value="3" /><label for="pc3" title="When did you previously meet other PCs?"> CONNECTED: inter-PC backstories.</label><br />
-		<input type="checkbox" name="f5" id="pc4" value="4" /><label for="pc4" title="Focus on power and efficiency, not personality."> OPTIMIZED: or you won't survive.</label><br />
+		<input type="checkbox" name="f1" id="pc0" value="0" /><label for="pc0" title="Who are you? Where are you from?"> DETAILED: history &amp; personality.</label>
+		<input type="checkbox" name="f2" id="pc1" value="1" /><label for="pc1" title="What do you want? Why are you here?"> MOTIVATED: desires &amp; plans.</label>
+		<input type="checkbox" name="f3" id="pc2" value="2" /><label for="pc2" title="How do your quirks &amp; foibles induce drama?"> FLAWED: characters with character.</label>
+		<input type="checkbox" name="f4" id="pc3" value="3" /><label for="pc3" title="When did you previously meet other PCs?"> CONNECTED: inter-PC backstories.</label>
+		<input type="checkbox" name="f5" id="pc4" value="4" /><label for="pc4" title="Focus on power and efficiency, not personality."> OPTIMIZED: or you won't survive.</label>
 	</td>
 </tr>
 <tr>
 	<th title="2: How the PCs relate to the world.">Group vs Universe</th>
 	<td>
-		<input type="radio" name="q2" id="group0" value="0" /><label for="group0" title="You help each other, without hesitation. Example: Star Trek."> TEAM: all for one &amp; one for all.</label><br />
-		<input type="radio" name="q2" id="group1" value="1" /><label for="group1" title="You need each other, so try to play nice. Example: Firefly."> ALLIED: common goals, limited disputes.</label><br />
-		<input type="radio" name="q2" id="group2" value="2" /><label for="group2" title="You tolerate each other, up to a point. Example: soap operas."> NEUTRAL: varied agendas, cross purposes.</label><br />
-		<input type="radio" name="q2" id="group3" value="3" /><label for="group3" title="You use each other, until you can stab them. Example: Survivor."> OPPOSED: competition, frenemies.</label><br />
+		<input type="radio" name="q2" id="group0" value="0" /><label for="group0" title="You help each other, without hesitation. Example: Star Trek."> TEAM: all for one &amp; one for all.</label>
+		<input type="radio" name="q2" id="group1" value="1" /><label for="group1" title="You need each other, so try to play nice. Example: Firefly."> ALLIED: common goals, limited disputes.</label>
+		<input type="radio" name="q2" id="group2" value="2" /><label for="group2" title="You tolerate each other, up to a point. Example: soap operas."> NEUTRAL: varied agendas, cross purposes.</label>
+		<input type="radio" name="q2" id="group3" value="3" /><label for="group3" title="You use each other, until you can stab them. Example: Survivor."> OPPOSED: competition, frenemies.</label>
 	</td>
 	<td>
-		<input type="radio" name="q3" id="conflict0" value="0" /><label for="conflict0" title="Your side is the best one, undoubtedly."> BLACK &amp; WHITE: clear lines, good vs bad.</label><br />
-		<input type="radio" name="q3" id="conflict1" value="1" /><label for="conflict1" title="Your side is the lesser evil, probably."> GRAY &amp; GRAYER: ambiguity &amp; secrets.</label><br />
+		<input type="radio" name="q3" id="conflict0" value="0" /><label for="conflict0" title="Your side is the best one, undoubtedly."> BLACK &amp; WHITE: clear lines, good vs bad.</label>
+		<input type="radio" name="q3" id="conflict1" value="1" /><label for="conflict1" title="Your side is the lesser evil, probably."> GRAY &amp; GRAYER: ambiguity &amp; secrets.</label>
 		<input type="radio" name="q3" id="conflict2" value="2" /><label for="conflict2" title="Your side has pluses &amp; minuses, as do others."> FULL SPECTRUM: many paths negotiable.</label> 
 	</td>
 </tr>
 <tr>
 	<th title="3: How you relate to the game.">Game Intent</th>
 	<td>
-		<input type="radio" name="q4" id="intent0" value="0" /><label for="intent0" title="You should stay in character and ham it up."> ROLEPLAY: <em>What would my PC say?</em></label><br />
-		<input type="radio" name="q4" id="intent1" value="1" /><label for="intent1" title="You should stay focused and search the room."> STORY: <em>What info does my PC need?</em></label><br />
-		<input type="radio" name="q4" id="intent2" value="2" /><label for="intent2" title="You should stay standing and fight on."> VICTORY: <em>What's my battle plan?</em></label><br />
+		<input type="radio" name="q4" id="intent0" value="0" /><label for="intent0" title="You should stay in character and ham it up."> ROLEPLAY: <em>What would my PC say?</em></label>
+		<input type="radio" name="q4" id="intent1" value="1" /><label for="intent1" title="You should stay focused and search the room."> STORY: <em>What info does my PC need?</em></label>
+		<input type="radio" name="q4" id="intent2" value="2" /><label for="intent2" title="You should stay standing and fight on."> VICTORY: <em>What's my battle plan?</em></label>
 	</td>
 	<td>
-		<input type="radio" name="q5" id="story0" value="0" /><label for="story0" title="You're on a journey with adventures ahead."> PLANNED: challenges that the PCs face.</label><br />
-		<input type="radio" name="q5" id="story1" value="1" /><label for="story1" title="You're at a crossroads with many destinations."> SANDBOX: world that the PCs explore.</label><br />
-		<input type="radio" name="q5" id="story2" value="2" /><label for="story2" title="You're in a circle with fellow storytellers."> COLLABORATIVE: tale that we create.</label><br />
+		<input type="radio" name="q5" id="story0" value="0" /><label for="story0" title="You're on a journey with adventures ahead."> PLANNED: challenges that the PCs face.</label>
+		<input type="radio" name="q5" id="story1" value="1" /><label for="story1" title="You're at a crossroads with many destinations."> SANDBOX: world that the PCs explore.</label>
+		<input type="radio" name="q5" id="story2" value="2" /><label for="story2" title="You're in a circle with fellow storytellers."> COLLABORATIVE: tale that we create.</label>
 	</td>
 </tr>
 <tr>
 	<th title="4: How the game is adjudicated.">Rules &amp; Combat</th>
 	<td>
-		<input type="radio" name="q6" id="rules0" value="0" /><label for="rules0" title="The rules are just useful advice."> LOOSE: rule of cool, do what feels right.</label><br />
-		<input type="radio" name="q6" id="rules1" value="1" /><label for="rules1" title="See the house rules described below."> MODERATE: exceptions when appropriate.</label><br />
-		<input type="radio" name="q6" id="rules2" value="2" /><label for="rules2" title="Read a players guide for tips &amp; tricks."> STRICT: to the letter, including loopholes.</label><br />
+		<input type="radio" name="q6" id="rules0" value="0" /><label for="rules0" title="The rules are just useful advice."> LOOSE: rule of cool, do what feels right.</label>
+		<input type="radio" name="q6" id="rules1" value="1" /><label for="rules1" title="See the house rules described below."> MODERATE: exceptions when appropriate.</label>
+		<input type="radio" name="q6" id="rules2" value="2" /><label for="rules2" title="Read a players guide for tips &amp; tricks."> STRICT: to the letter, including loopholes.</label>
 	</td>
 	<td>
-		<input type="radio" name="q7" id="combat0" value="0" /><label for="combat0" title="Big-picture description of scenes and outcomes."> QUALITATIVE: roles over rolls.</label><br />
-		<input type="radio" name="q7" id="combat1" value="1" /><label for="combat1" title="Play by play, based on roll results."> QUANTITATIVE: theater of the mind.</label><br />
-		<input type="radio" name="q7" id="combat2" value="2" /><label for="combat2" title="Wargame based on positioning &amp; status effects."> TACTICAL: on a detailed battle mat.</label><br />
+		<input type="radio" name="q7" id="combat0" value="0" /><label for="combat0" title="Big-picture description of scenes and outcomes."> QUALITATIVE: roles over rolls.</label>
+		<input type="radio" name="q7" id="combat1" value="1" /><label for="combat1" title="Play by play, based on roll results."> QUANTITATIVE: theater of the mind.</label>
+		<input type="radio" name="q7" id="combat2" value="2" /><label for="combat2" title="Wargame based on positioning &amp; status effects."> TACTICAL: on a detailed battle mat.</label>
 	</td>
 </tr>
 <tr>	<th> House Rules<br />&amp; Tips</th> <td colspan="2"> <textarea name="t3" rows="3" placeholder="How We Roll: synopsis, links, &amp; other guidance" title="synopsis, links, other guidance"></textarea> </td> </tr>
@@ -114,5 +126,12 @@
 </tbody>
 </table>
 </form>
+<script>
+	for(let e of document.getElementsByTagName("label")) {
+		let x = document.createElement("abbr");
+		x.appendChild(document.createTextNode(" "+e.title));
+		e.appendChild(x);
+	}
+</script>
 </body>
 </html>
